# vk-client-rs

./: .env.example  Cargo.toml  build.rs  justfile
src/: ext.rs  main.rs
