[package]
name = "vk-client-rs"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde-aux = { version = "4.3.1", default-features = false }
serde_json = "1.0.111"
serde_path_to_error = "0.1.15"
serde_repr = "0.1.18"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
